<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/suoyou_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/backgroud_guancang"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wodekapai" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <ImageView
        android:id="@+id/suoyou_yinying"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroud_guancang"
        app:layout_constraintBottom_toBottomOf="@+id/suoyou_bg"
        app:layout_constraintEnd_toEndOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.001"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorAccent" />





    <FrameLayout
        android:id="@+id/sy_fl"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp"

        app:layout_constraintBottom_toBottomOf="@+id/suoyou_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/suoyou_yinying"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <TextView
        android:id="@+id/suoyou_biaoti"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/jianbian"

        android:gravity="center"
        android:text="@string/kapaiguicang"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/sy_fl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/suoyou_yinying"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <ScrollView
        android:id="@+id/suoyou_sv1"
        android:layout_width="@+id/suoyou_yinying"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/suoyou_yinying"
        app:layout_constraintStart_toStartOf="@id/suoyou_yinying"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/suoyou_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/imageView6"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/jiantou"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <Button
                android:id="@+id/sy_quanbu"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="@string/quanbu"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />



            <Button
                android:id="@+id/sy_ssr"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="SSR"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_quanbu" />

            <Button
                android:id="@+id/sy_sr"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="SR"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_ssr" />

            <Button
                android:id="@+id/sy_r"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="R"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_sr" />



            <Button
                android:id="@+id/sy_chunjuan"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="@string/chunjuan"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_r" />


            <Button
                android:id="@+id/sy_hg"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="@string/haoga"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_chunjuan" />

            <Button
                android:id="@+id/sy_hh"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="@string/haohao"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_hg" />

            <Button
                android:id="@+id/sy_hj"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="@string/huangjie"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_hh" />

            <Button
                android:id="@+id/sy_jj"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="@string/jiajia"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_hj" />

            <Button
                android:id="@+id/sy_mm"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="@string/miaomiao"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_jj" />

            <Button
                android:id="@+id/sy_xjst"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="@string/xiaojiasiting"
                android:textColor="@android:color/background_light"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_mm" />


            <Button
                android:id="@+id/sy_xx"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/suoyou_button"
                android:text="@string/xuanxuan"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sy_xjst" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/sy_jishu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="已获得()张卡牌"
        app:layout_constraintBottom_toTopOf="@+id/sy_fl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/suoyou_yinying"
        app:layout_constraintTop_toBottomOf="@+id/suoyou_biaoti" />


</androidx.constraintlayout.widget.ConstraintLayout>